Bugfix: Synchronizing scrollbar and translation

--- a/src/components/ResultList/ResultList.css
+++ b/src/components/ResultList/ResultList.css
@@ -13,3 +13,35 @@
     background-color: white;
     padding: 50px 0px 0px 20px;
 }
+
+.resulttabling {
+    width: 120%
+}
+
+.emptyscrolling {
+    width: 200%
+}
+
+.contents-results::-webkit-scrollbar {
+    background-color: transparent;
+}
+
+.Scrollthebar {
+    overflow-x: scroll;
+}
+
+.Scrollthebar::-webkit-scrollbar {
+    width: 15px;
+}
+
+.Scrollthebar::-webkit-scrollbar-track {
+    border-radius: 20px;
+    background-color: white;
+    width: 50px;
+}
+
+.Scrollthebar::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #b0c4e4;
+    border: 2em solid #7697cb;
+}
